# llmassist

./: .dockerignore  .env.dist  .gitignore  .gitmodules  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
.devcontainer/: .env  devcontainer.json  docker-compose.dev.yml  postCreateCommand.sh
migrations/: env.py
migrations/versions/: 57159a5ae5e8_init.py  8d0ff7a89391_init.py
src/: __main__.py  context.py  exceptions.py  services.py
src/aiogram_bot/: bot.py
src/aiogram_bot/db/: tg_user.py
src/aiogram_bot/handlers/: __init__.py  messages.py  settings.py
src/aiogram_bot/keyboards/: default_commands.py
src/aiogram_bot/keyboards/inline/: settings.py
src/aiogram_bot/middlewares/: __init__.py  auth.py  db.py  throttling.py
src/db/: __init__.py  db.py
src/db/models/: aiogram_bot.py  user.py
src/db/services/: settings.py  user.py
src/llms/: g4f_service.py  llm.py  llm_service.py
src/utils/: config.py  context.py  loggers.py  settings.py
src/utils/llms/: llm.py
src/utils/proxies/: checker.py  manager.py  provider.py  tor_provider.py
tests/: conftest.py  mocks.py  test_db.py  test_logger.py  test_settings.py
