[tool.poetry]
name="llmassist"
version="0.1.0"
description=""
authors = ["dmitryulkin <dmulkin@yandex.ru>"]
license = "MIT License"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
g4f = {extras = ["all"], version = "^0.2.6.2"}

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
