[tool.poetry]
name="llmassist"
version="0.1.0"
description="Telegram bot with free LLM assistant"
authors = ["dmitryulkin <dmulkin@yandex.ru>"]
license = "MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
aiogram = "^3.5.0"
loguru = "^0.7.2"
sqlmodel = "^0.0.18"
aiosqlite = "^0.20.0"
alembic = "^1.13.1"
aiohttp = "^3.9.5"
aiohttp-socks = "^0.8.4"
g4f = {extras = ["all"], version = "^0.3.1.9"}

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.5.0"

[tool.pytest.ini_options]
addopts="-rsxX -l --tb=short --strict-markers -n 4"
markers = [
  "smoke: Run the smoke test functions"
]
xfail_strict = true
norecursedirs = ".* *.egg dist build src tor-lyrebird"
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
relative_files = true
data_file="tests/cov/.coverage"
source = ["src"]
[tool.coverage.html]
directory="tests/cov/html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
